# embodied_agents

./: .gitignore  LICENSE  README.md  demo.ipynb  environment.yml  pyproject.toml  requirements.txt  run_simulation.py
src/agents/: GenerativeAgent.py  GenerativeAgentMemory.py  GenerativeSocialAgent.py  LLMInteraction.py  MemoryProvider.py  SimpleAgent.py  base_agent.py
src/configs/: configs.py
src/environments/: GraphEnvironment.py
src/interactions/: DialogueSimulation.py  MajorityRule.py  VoterModel.py  base_interaction.py
src/llm/: base.py  ollama_client.py  openai_client.py
src/metrics/: Metrics.py
src/opinion_dynamics/: OpinionAnalyzer.py  __init__.py
src/personas/: Persona.py  generate_personas.py
src/simulation/: AgentFactory.py  AgentManager.py  SimulationRunner.py
src/utils/: event_handler.py  llm_utils.py  log_config.py
src/visualizations/: network_visualizer.py
tests/: test_agent_factory.py  test_agents.py  test_environments.py  test_interactions.py  test_opinion_analyzer.py  test_personas.py  test_simulations.py
